--- a/mint.html
+++ b/mint.html
@@ -1230,7 +1230,7 @@
             }
 
             // Open multi-hop mint page
-            const multiHopUrl = `enhanced_multihop_mint.html?${params.toString()}`;
+            const multiHopUrl = `multi-hop-mint.html?${params.toString()}`;
             console.log('🚀 Opening multi-hop URL:', multiHopUrl);
             
             const multiHopWindow = window.open(multiHopUrl, '_blank');
