--- a/token-library.html
+++ b/token-library.html
@@ -157,7 +157,7 @@
         
         .stat-item {
             text-align: center;
-            padding: 15px;
+            padding: 10px;
             background: rgba(40, 40, 80, 0.6);
             border-radius: 10px;
             border: 1px solid rgba(255, 255, 255, 0.1);
@@ -166,7 +166,7 @@
         }
         
         .stat-number {
-            font-size: 2em;
+            font-size: 1.5em;
             font-weight: 700;
             color: #9d4edd;
         }
@@ -440,7 +440,7 @@
             </div>
             <div class="stat-item">
                 <div class="stat-number" id="mariaCount">-</div>
-                <div class="stat-label">Maria Tokens</div>
+                <div class="stat-label" title="Maria Addresses:&#10;0xBF182955401aF3f2f7e244cb31184E93E74a2501&#10;0x7a20189b297343cf26d8548764b04891f37f3414">Maria Tokens</div>
             </div>
         </div>
 
