--- a/token-library.html
+++ b/token-library.html
@@ -204,8 +204,8 @@
             padding: 25px;
             margin-bottom: 25px;
             border: 2px solid rgba(157, 78, 221, 0.2);
-            max-height: 70vh;
-            overflow-y: auto;
+            height: 500px;
+            overflow-y: scroll;
         }
         
         .results-header {
