--- a/addliquidity.html
+++ b/addliquidity.html
@@ -510,8 +510,9 @@
                 const reserveAFormatted = parseFloat(reserveA) / Math.pow(10, parseInt(decimalsA));
                 const reserveBFormatted = parseFloat(reserveB) / Math.pow(10, parseInt(decimalsB));
 
-                // Return ratio (tokenB amount per 1 tokenA)
-                const ratio = reserveBFormatted / reserveAFormatted;
+                // Return ratio (tokenB amount per 1 tokenA) adjusted for decimal difference
+                const decimalDifference = parseInt(decimalsA) - parseInt(decimalsB);
+                const ratio = (reserveBFormatted / reserveAFormatted) * Math.pow(10, decimalDifference);
                 return ratio;
 
             } catch (error) {
