--- a/addliquidity.html
+++ b/addliquidity.html
@@ -506,12 +506,16 @@
                     reserveB = reserves[0];
                 }
 
-                // Convert reserves using proper decimals
+                // Convert reserves using proper decimals  
                 const reserveAFormatted = parseFloat(reserveA) / Math.pow(10, parseInt(decimalsA));
                 const reserveBFormatted = parseFloat(reserveB) / Math.pow(10, parseInt(decimalsB));
 
+                // Adjust for decimal difference then calculate ratio
+                const decimalDifference = parseInt(decimalsA) - parseInt(decimalsB);
+                const adjustedReserveBFormatted = reserveBFormatted * Math.pow(10, decimalDifference);
+                
                 // Return simple ratio (tokenB amount per 1 tokenA)
-                const ratio = reserveBFormatted / reserveAFormatted;
+                const ratio = adjustedReserveBFormatted / reserveAFormatted;
                 return ratio;
 
             } catch (error) {
