--- a/addliquidity.html
+++ b/addliquidity.html
@@ -230,11 +230,11 @@
         <div class="token-pair">
             <div class="input-group">
                 <label>Token A Amount:</label>
-                <input type="number" id="amountA" placeholder="1000" step="0.000001" oninput="calculateAmountB()">
+                <input type="number" id="amountA" placeholder="1000" step="0.000001" oninput="debouncedCalculateAmountB()">
             </div>
             <div class="input-group">
                 <label>Token B Amount:</label>
-                <input type="number" id="amountB" placeholder="1000" step="0.000001" oninput="calculateAmountA()">
+                <input type="number" id="amountB" placeholder="1000" step="0.000001" oninput="debouncedCalculateAmountA()">
             </div>
         </div>
 
@@ -414,9 +414,12 @@
             }
         }
 
+        // Add timeout variables for debouncing
+        let calculateTimeoutA = null;
+        let calculateTimeoutB = null;
+
         async function calculateAmountB() {
-            if (isCalculating || !web3 || !isWalletConnected) return;
-            isCalculating = true;
+            if (!web3 || !isWalletConnected) return;
 
             const tokenA = document.getElementById('tokenA').value;
             const tokenB = document.getElementById('tokenB').value;
@@ -425,7 +428,6 @@
             console.log(`calculateAmountB called - TokenA: ${tokenA}, TokenB: ${tokenB}, AmountA: ${amountA}`);
 
             if (!tokenA || !tokenB || !amountA) {
-                isCalculating = false;
                 return;
             }
 
@@ -440,20 +442,16 @@
             } catch (error) {
                 console.log('Could not calculate amount B:', error.message);
             }
-
-            isCalculating = false;
         }
 
         async function calculateAmountA() {
-            if (isCalculating || !web3 || !isWalletConnected) return;
-            isCalculating = true;
+            if (!web3 || !isWalletConnected) return;
 
             const tokenA = document.getElementById('tokenA').value;
             const tokenB = document.getElementById('tokenB').value;
             const amountB = document.getElementById('amountB').value;
 
             if (!tokenA || !tokenB || !amountB) {
-                isCalculating = false;
                 return;
             }
 
@@ -466,8 +464,17 @@
             } catch (error) {
                 console.log('Could not calculate amount A:', error.message);
             }
+        }
 
-            isCalculating = false;
+        // Debounced calculation functions
+        function debouncedCalculateAmountB() {
+            if (calculateTimeoutA) clearTimeout(calculateTimeoutA);
+            calculateTimeoutA = setTimeout(calculateAmountB, 300);
+        }
+
+        function debouncedCalculateAmountA() {
+            if (calculateTimeoutB) clearTimeout(calculateTimeoutB);
+            calculateTimeoutB = setTimeout(calculateAmountA, 300);
         }
 
         async function getPoolRatio(tokenA, tokenB) {
